added user interface functions

--- a/project-pre-test.ipynb
+++ b/project-pre-test.ipynb
@@ -19,20 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Variable to display all the items in stock and their price\n",
-    "stock = \"\"\"\n",
+    "display = \"\"\"\n",
     "Below are the prices of our items in stock\n",
     "\n",
-    "Egg    --> 90\n",
+    "Egg     --> 90\n",
     "Bread   --> 500\n",
     "Indomie --> 100\n",
     "Butter  --> 800\n",
     "Milk    --> 1400\n",
     "Sugar   --> 200\n",
+    "Chair   --> 15000\n",
+    "Table   --> 20000\n",
+    "fan     --> 17000\n",
     "\"\"\""
    ]
   },
@@ -166,7 +169,7 @@
     "start = input(\"Are you ready to start: \")\n",
     "\n",
     "if start == 'yes':\n",
-    "    print(stock)\n",
+    "    print(display)\n",
     "    \n",
     "    purchase = item_purchase()\n",
     "    final_price(purchase)"
@@ -457,6 +460,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "function will make use of new dictionary that is based using category and indicate that as well in the final statement of what was purchased\n",
+    "\"\"\"\n",
     "def new_item_purchase():\n",
     "    purchased = {}\n",
     "    \n",
@@ -509,6 +515,108 @@
    ],
    "source": [
     "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### User interface\n",
+    "\n",
+    "##### This will obtain interaction from a user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_interact(purchased):\n",
+    "    item = input(\"What would you like to buy: \")\n",
+    "    amount = int(input(\"How many: \"))\n",
+    "    if item not in purchased:\n",
+    "        purchased[item] = {}\n",
+    "        purchased[item]['amount'] = amount\n",
+    "    elif item in purchased:\n",
+    "        purchased[item]['amount'] += amount\n",
+    "\n",
+    "    return purchased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_purchase(purchased):\n",
+    "    for item in purchased:\n",
+    "        for category in full_stock_dict:\n",
+    "            if item in full_stock_dict[category]:\n",
+    "                purchased[item]['category'] = category\n",
+    "                purchased[item]['price'] = purchased[item]['amount']*full_stock_dict[category][item]\n",
+    "    return purchased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "\n",
+    "    print(display)\n",
+    "\n",
+    "    print(\"Do you want to purchase anything: \")\n",
+    "    ask = input()\n",
+    "\n",
+    "    if ask == 'yes':\n",
+    "        purchased = {}\n",
+    "        while ask:\n",
+    "            purchase = user_interact(purchased)\n",
+    "            store = user_purchase(purchase)\n",
+    "            ask = input(\"Would you like to continue shopping: \")\n",
+    "            if ask == 'yes':\n",
+    "                continue\n",
+    "            else:\n",
+    "                ask = False\n",
+    "                print(purchased)\n",
+    "    else:\n",
+    "        print(\"Thank you for shoping with us\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Below are the prices of our items in stock\n",
+      "\n",
+      "Egg     --> 90\n",
+      "Bread   --> 500\n",
+      "Indomie --> 100\n",
+      "Butter  --> 800\n",
+      "Milk    --> 1400\n",
+      "Sugar   --> 200\n",
+      "Chair   --> 15000\n",
+      "Table   --> 20000\n",
+      "fan     --> 17000\n",
+      "\n",
+      "Do you want to purchase anything: \n",
+      "{'Egg': {'amount': 15, 'category': 'food', 'price': 1350}, 'Chair': {'amount': 1, 'category': 'household', 'price': 15000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
    ]
   },
   {
