construct update, precheck and check function

--- a/project-pre-test.ipynb
+++ b/project-pre-test.ipynb
@@ -532,12 +532,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this function will trigger an interaction with the customer to obtain what they want to buy and the amount they want to buy as well.\n",
+    "\n",
     "def user_interact(purchased):\n",
     "    item = input(\"What would you like to buy: \")\n",
     "    amount = int(input(\"How many: \"))\n",
+    "    #check if the item has been purchased before\n",
     "    if item not in purchased:\n",
     "        purchased[item] = {}\n",
     "        purchased[item]['amount'] = amount\n",
+    "    #if it has been purchased already then simply increase the amount purchased by the number customer provides\n",
     "    elif item in purchased:\n",
     "        purchased[item]['amount'] += amount\n",
     "\n",
@@ -550,6 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this function takes what the customer has said they will purchase and extrapolates other fields; total price and category of item\n",
+    "\n",
     "def user_purchase(purchased):\n",
     "    for item in purchased:\n",
     "        for category in full_stock_dict:\n",
@@ -574,12 +580,15 @@
     "\n",
     "    if ask == 'yes':\n",
     "        purchased = {}\n",
+    "        #loop will enable customer to continuosly state what they want to buy\n",
     "        while ask:\n",
     "            purchase = user_interact(purchased)\n",
     "            store = user_purchase(purchase)\n",
+    "            #find out if they want to continue shopping\n",
     "            ask = input(\"Would you like to continue shopping: \")\n",
     "            if ask == 'yes':\n",
     "                continue\n",
+    "            #break the loop at this point\n",
     "            else:\n",
     "                ask = False\n",
     "                print(purchased)\n",
@@ -625,6 +634,165 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Update the stock amount after a purchase is done\n",
+    "\n",
+    "#### check the stock amount if it is below a certain price in the situation (10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_purchase = {'Egg': {'amount': 15, 'category': 'food', 'price': 1350}, 'Chair': {'amount': 1, 'category': 'household', 'price': 15000}}\n",
+    "\n",
+    "full_stock_dict = {\n",
+    "    'food':{\n",
+    "        'Egg': 90,\n",
+    "        'Bread':500,\n",
+    "        'Indomie':100,\n",
+    "        'Butter':800,\n",
+    "        'Milk':1400,\n",
+    "        'Sugar':200,\n",
+    "    },\n",
+    "    'household':{\n",
+    "        'Chair': 15000,\n",
+    "        'Table': 20000,\n",
+    "        'fan': 17000\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_stock(stock,purchase):\n",
+    "    #using full_stock_dict and dictionary created from purchased items\n",
+    "    a = stock\n",
+    "    b = purchase\n",
+    "    for x in b:\n",
+    "        for y in a:\n",
+    "            if x in a[y]:\n",
+    "                a[y][x] -= b[x]['amount']\n",
+    "                #if subtracting the amount creates a negative value then it will be normalised to zero\n",
+    "                if a[y][x] <= 0:\n",
+    "                    a[y][x] = 0\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'food': {'Egg': 90, 'Bread': 500, 'Indomie': 100, 'Butter': 800, 'Milk': 1400, 'Sugar': 200}, 'household': {'Chair': 15000, 'Table': 20000, 'fan': 17000}}\n",
+      "{'food': {'Egg': 75, 'Bread': 500, 'Indomie': 100, 'Butter': 800, 'Milk': 1400, 'Sugar': 200}, 'household': {'Chair': 14999, 'Table': 20000, 'fan': 17000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_stock_dict)\n",
+    "test = update_stock(full_stock_dict,test_purchase)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_stock_dict['food']['Egg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_purchase['Egg']['amount']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_store(stock):\n",
+    "    for x in stock:\n",
+    "        for y in stock[x]:\n",
+    "            if stock[x][y] <= 10:\n",
+    "                print(\"URGENT: \" + y + \" is low in stock\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'food': {'Egg': 0, 'Bread': 500, 'Indomie': 100, 'Butter': 800, 'Milk': 1400, 'Sugar': 200}, 'household': {'Chair': 14992, 'Table': 20000, 'fan': 17000}}\n",
+      "URGENT: Egg is low in stock\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_stock_dict)\n",
+    "test = update_stock(full_stock_dict,test_purchase)\n",
+    "check_store(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pre_check_store(stock, purchase):\n",
+    "    for x in purchase:\n",
+    "        for y in stock:\n",
+    "            if purchase[x]['amount'] < stock[y][x]"
+   ]
   }
  ],
  "metadata": {
