update Readme and continue function test

--- a/project-pre-test.ipynb
+++ b/project-pre-test.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
     "        purchased[item] = {}\n",
     "        purchased[item]['amount'] = amount\n",
     "    #if it has been purchased already then simply increase the amount purchased by the number customer provides\n",
-    "    elif item in purchased:\n",
+    "    elif item  in purchased:\n",
     "        purchased[item]['amount'] += amount\n",
     "\n",
     "    return purchased"
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
     "            #break the loop at this point\n",
     "            else:\n",
     "                ask = False\n",
-    "                print(purchased)\n",
+    "                print(store)\n",
     "    else:\n",
     "        print(\"Thank you for shoping with us\")\n",
     "    "
@@ -671,10 +671,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#with every purchase made update the amount of each items in stock\n",
+    "\n",
     "def update_stock(stock,purchase):\n",
     "    #using full_stock_dict and dictionary created from purchased items\n",
     "    a = stock\n",
@@ -751,14 +753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#check the stock inventory and alert if it is less than a certain amount\n",
     "def check_store(stock):\n",
     "    for x in stock:\n",
     "        for y in stock[x]:\n",
-    "            if stock[x][y] <= 10:\n",
+    "            if x == 'food' and stock[x][y] <= 10:\n",
+    "                print(\"URGENT: \" + y + \" is low in stock\")\n",
+    "            elif x == 'household' and stock[x][y] < 5:\n",
     "                print(\"URGENT: \" + y + \" is low in stock\")"
    ]
   },
@@ -784,15 +789,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#during purchase of items, continuously check if there is enough in store if not let customer know just amount is available\n",
     "def pre_check_store(stock, purchase):\n",
+    "    n_check =[]\n",
+    "    c = 0\n",
     "    for x in purchase:\n",
     "        for y in stock:\n",
-    "            if purchase[x]['amount'] < stock[y][x]"
+    "            if x in list(stock[y].keys()) and  purchase[x]['amount'] > stock[y][x]:\n",
+    "                #print(\"sorry but we are out of \" + x)\n",
+    "                print(\"sorry we only have \" + str(stock[y][x]) + \" \" + x + \" left in stock\")\n",
+    "                n_check.append(x)\n",
+    "                c = 1\n",
+    "    for check in n_check:\n",
+    "        del purchase[check]\n",
+    "    return [purchase,c]\n",
+    "                "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorry but we are out of Chair\n",
+      "we only have 50 Chair left in stock\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Egg': {'amount': 30, 'category': 'food', 'price': 90},\n",
+       "  'Butter': {'amount': 4, 'category': 'food', 'price': 14000}},\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_check_test = {'Egg':{'amount': 30, 'category': 'food', 'price': 90},'Butter':{'amount': 4, 'category': 'food', 'price': 14000},'Chair':{'amount': 60, 'category': 'food', 'price': 14000} }\n",
+    "pre_check_stock = {'food': {'Egg': 1000, 'Bread': 100, 'Indomie': 1000, 'Butter': 100, 'Milk': 500, 'Sugar': 1000}, 'household': {'Chair': 50, 'Table': 25, 'fan': 70}}\n",
+    "pre_check_store(pre_check_stock, pre_check_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ebuka'"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"Ebuka\"\n",
+    "x.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Combining all functions for user interaction and checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize needed information\n",
+    "\n",
+    "display = \"\"\"\n",
+    "Below are the prices of our items in stock\n",
+    "\n",
+    "Egg     --> 90\n",
+    "Bread   --> 500\n",
+    "Indomie --> 100\n",
+    "Butter  --> 800\n",
+    "Milk    --> 1400\n",
+    "Sugar   --> 200\n",
+    "Chair   --> 15000\n",
+    "Table   --> 20000\n",
+    "fan     --> 17000\n",
+    "\"\"\"\n",
+    "# this is the\n",
+    "stock_count = {\n",
+    "    'food':{\n",
+    "        'Egg': 100,\n",
+    "        'Bread':100,\n",
+    "        'Indomie':100,\n",
+    "        'Butter':100,\n",
+    "        'Milk':100,\n",
+    "        'Sugar':100,\n",
+    "    },\n",
+    "    'household':{\n",
+    "        'Chair': 10,\n",
+    "        'Table': 5,\n",
+    "        'fan': 7\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# this is the price of items \n",
+    "full_stock_dict = {\n",
+    "    'food':{\n",
+    "        'Egg': 90,\n",
+    "        'Bread':500,\n",
+    "        'Indomie':100,\n",
+    "        'Butter':800,\n",
+    "        'Milk':1400,\n",
+    "        'Sugar':200,\n",
+    "    },\n",
+    "    'household':{\n",
+    "        'Chair': 15000,\n",
+    "        'Table': 20000,\n",
+    "        'fan': 17000\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Welcome esteemed customer to our store \n",
+      "\n",
+      "\n",
+      "Below are the prices of our items in stock\n",
+      "\n",
+      "Egg     --> 90\n",
+      "Bread   --> 500\n",
+      "Indomie --> 100\n",
+      "Butter  --> 800\n",
+      "Milk    --> 1400\n",
+      "Sugar   --> 200\n",
+      "Chair   --> 15000\n",
+      "Table   --> 20000\n",
+      "fan     --> 17000\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'Milk': {'amount': 10, 'category': 'food', 'price': 14000}}\n",
+      "URGENT: Chair is low in stock\n",
+      "This is the new stock count: \n",
+      "{'food': {'Egg': 95, 'Bread': 89, 'Indomie': 95, 'Butter': 98, 'Milk': 37, 'Sugar': 86}, 'household': {'Chair': 4, 'Table': 5, 'fan': 7}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Welcome esteemed customer to our store \\n\")\n",
+    "\n",
+    "print(display)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "ask = input(\"Do you want to purchase anything: \")\n",
+    "\n",
+    "if ask == 'yes':\n",
+    "    purchased = {}\n",
+    "    #loop will enable customer to continuosly state what they want to buy\n",
+    "    while ask:\n",
+    "\n",
+    "        purchase = user_interact(purchased)\n",
+    "\n",
+    "        cont = pre_check_store(stock_count,purchase)\n",
+    "        \n",
+    "        if cont[1] == 0:\n",
+    "            buy = user_purchase(purchase)\n",
+    "            #find out if they want to continue shopping\n",
+    "            ask = input(\"Would you like to continue shopping: \")\n",
+    "            if ask == 'yes':\n",
+    "                continue\n",
+    "            else:\n",
+    "                #break the loop at this point\n",
+    "                ask = False\n",
+    "                print(buy)\n",
+    "                stock_count = update_stock(stock_count, purchased)\n",
+    "                check_store(stock_count)\n",
+    "                print(\"This is the new stock count: \")\n",
+    "                print(stock_count)\n",
+    "        else:\n",
+    "            purchased = cont[0]\n",
+    "            print(\"returning\")\n",
+    "            continue\n",
+    "            \n",
+    "else:\n",
+    "    print(\"Thank you for visiting with us\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review of code sequence\n",
+    "\n",
+    "##### maybe have pre_check_store happen right after customer picks and item and the amount to buy....writing reviewed functions below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pre_check_s(stock, item, count):\n",
+    "    #n_check =[]\n",
+    "    c = 0\n",
+    "    for y in stock:\n",
+    "        if item in list(stock[y].keys()) and  count > stock[y][item]:\n",
+    "            print(\"sorry we only have \" + str(stock[y][item]) + \" \" + item + \" left in stock\")\n",
+    "            #n_check.append(x)\n",
+    "            c = 1\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_int(purchased):\n",
+    "    item = input(\"What would you like to buy: \")\n",
+    "    amount = int(input(\"How many: \"))\n",
+    "    check = pre_check_s(stock_count,item,amount)\n",
+    "\n",
+    "    if check == 0:\n",
+    "        #check if the item has been purchased before\n",
+    "        if item not in purchased:\n",
+    "            purchased[item] = {}\n",
+    "            purchased[item]['amount'] = amount\n",
+    "        #if it has been purchased already then simply increase the amount purchased by the number customer provides\n",
+    "        elif item  in purchased:\n",
+    "            purchased[item]['amount'] += amount\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"retuning\")\n",
+    "        print(purchased)\n",
+    "        user_int(purchased)\n",
+    "\n",
+    "    return purchased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Welcome esteemed customer to our store \n",
+      "\n",
+      "\n",
+      "Below are the prices of our items in stock\n",
+      "\n",
+      "Egg     --> 90\n",
+      "Bread   --> 500\n",
+      "Indomie --> 100\n",
+      "Butter  --> 800\n",
+      "Milk    --> 1400\n",
+      "Sugar   --> 200\n",
+      "Chair   --> 15000\n",
+      "Table   --> 20000\n",
+      "fan     --> 17000\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'Bread': {'amount': 5, 'category': 'food', 'price': 2500}, 'Chair': {'amount': 6, 'category': 'household', 'price': 90000}, 'Butter': {'amount': 2, 'category': 'food', 'price': 1600}}\n",
+      "URGENT: Chair is low in stock\n",
+      "This is the new stock count: \n",
+      "{'food': {'Egg': 95, 'Bread': 93, 'Indomie': 95, 'Butter': 98, 'Milk': 47, 'Sugar': 86}, 'household': {'Chair': 4, 'Table': 5, 'fan': 7}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Welcome esteemed customer to our store \\n\")\n",
+    "\n",
+    "print(display)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "ask = input(\"Do you want to purchase anything: \")\n",
+    "\n",
+    "if ask == 'yes':\n",
+    "    purchased = {}\n",
+    "    #loop will enable customer to continuosly state what they want to buy\n",
+    "    while ask:\n",
+    "\n",
+    "        purchase = user_int(purchased)\n",
+    "\n",
+    "        #cont = pre_check_store(stock_count,purchase)\n",
+    "        \n",
+    "        \n",
+    "        buy = user_purchase(purchase)\n",
+    "        #find out if they want to continue shopping\n",
+    "        ask = input(\"Would you like to continue shopping: \")\n",
+    "        if ask == 'yes':\n",
+    "            continue\n",
+    "        else:\n",
+    "            #break the loop at this point\n",
+    "            ask = False\n",
+    "            print(buy)\n",
+    "            stock_count = update_stock(stock_count, purchased)\n",
+    "            check_store(stock_count)\n",
+    "            print(\"This is the new stock count: \")\n",
+    "            print(stock_count)\n",
+    "        \n",
+    "            \n",
+    "else:\n",
+    "    print(\"Thank you for visiting with us\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
