added function to open/close connection to db

--- a/database.ipynb
+++ b/database.ipynb
@@ -828,6 +828,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for opening and closing connection to postgres\n",
+    "\n",
+    "def pg_connect(status,*var):\n",
+    "\n",
+    "    global cur \n",
+    "    \n",
+    "    if status == 'connect':\n",
+    "        cur = psycopg2.connect(\n",
+    "        host=\"localhost\",\n",
+    "        database=\"postgres\",\n",
+    "        user=\"postgres\",\n",
+    "        password=\"@Ebuka79\")\n",
+    "        return cur.cursor()\n",
+    "\n",
+    "    elif status == 'close':\n",
+    "        var[0].close()\n",
+    "        cur.close()\n",
+    "        print('connection closed')\n",
+    "\n",
+    "    else:\n",
+    "        stat = input('status code incorrect please select either connect or stop: ')\n",
+    "        pg_connect(stat)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "\n",
+    "test = pg_connect('connect')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('PostgreSQL 14.3, compiled by Visual C++ build 1914, 64-bit',)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.execute('SELECT version()')\n",
+    "test.fetchone()\n",
+    "#test.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connection closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "pg_connect('close',(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
