add script for database interaction

--- a/database.ipynb
+++ b/database.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -356,22 +356,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Egg</td>\n",
-       "      <td>90</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Indomie</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Bread</td>\n",
        "      <td>500</td>\n",
@@ -379,7 +363,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Butter</td>\n",
        "      <td>400</td>\n",
@@ -387,10 +371,26 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>Milk</td>\n",
        "      <td>1400</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Sugar</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Salt</td>\n",
+       "      <td>200</td>\n",
        "      <td>1000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -400,14 +400,14 @@
       ],
       "text/plain": [
        "   productkey productname  price  quantity  categorykey\n",
-       "0           1         Egg     90      1000            1\n",
-       "1           2     Indomie    100      1000            1\n",
-       "2           3       Bread    500       500            1\n",
-       "3           4      Butter    400      1000            1\n",
-       "4           5        Milk   1400      1000            1"
+       "0           3       Bread    500       500            1\n",
+       "1           4      Butter    400      1000            1\n",
+       "2           5        Milk   1400      1000            1\n",
+       "3           6       Sugar    200      1000            1\n",
+       "4           7        Salt    200      1000            1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
