add code to insert data into database

--- a/database.ipynb
+++ b/database.ipynb
@@ -911,6 +911,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        INSERT INTO test_purchase(product,quantity,pk)\n",
+      "        VALUES\n",
+      "        (bread,3,1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "item = 'bread'\n",
+    "quantity = 3\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "        INSERT INTO test_purchase(product,quantity,pk)\n",
+    "        VALUES\n",
+    "        ({item},{quantity},1)\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
