connect db_interact to user_interact

--- a/database.ipynb
+++ b/database.ipynb
@@ -937,6 +937,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    host=\"localhost\",\n",
+    "    database=\"postgres\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"@Ebuka79\")\n",
+    "\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "#cur.execute('SELECT version()')\n",
+    "\n",
+    "retrieve_com = \"\"\"\n",
+    "        SELECT quantity\n",
+    "        FROM product\n",
+    "        WHERE productkey = 2\n",
+    "\"\"\"\n",
+    "\n",
+    "cur.execute(retrieve_com)\n",
+    "\n",
+    "data = cur.fetchone()\n",
+    "\n",
+    "#pd_data = pd.DataFrame(data, columns=['productkey','productname','price','quantity','categorykey'])\n",
+    "print(data[0])\n",
+    "cur.close()\n",
+    "\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
